@@ -1,3 +1,9 @@
+2007-05-19  Christian Persch  <chpe@gnome.org>
+
+	* src/prefs-dialog.c: (prefs_dialog_show_help):
+
+	Make this string static.
+
 2007-05-13  Christian Persch  <chpe@gnome.org>
 
 	* configure.ac:
